# mobile-dev-util

./: package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Command.svelte  store.ts
src/lib/components/: ControlPanel.svelte  Modal.svelte  OsSwitcher.svelte  SimulatorSwitcher.svelte
