[package]
name = "mobile-dev-util"
version = "0.0.0"
description = "A Tauri App"
authors = ["Sicong Jiang"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mozdevice = "0.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
